--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"express": "^4.19.2",
 		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "^2.0.2",
 		"pg": "^8.11.5",
 		"uuid": "^11.1.0"
 	},
