--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"dotenv": "^16.4.5",
 		"dotenv-esm": "^16.0.3-4",
 		"express": "^4.19.2",
+		"fluent-ffmpeg": "^2.1.3",
 		"helmet": "^7.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"multer": "^2.0.2",
